<?xml version="1.0"?>
<package format="2">
    <name>mobile_robot_ros_driver</name>
    <version>0.0.1</version>
    <description>The mobile_robot_ros_driver package.</description>

    <maintainer email="bia@itmo.ru">likerobotics</maintainer>
    <license>MIT License</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>genmsg</buildtool_depend>
    <!-- <build_depend>controller_manager</build_depend> -->
    <build_depend>joint_state_controller</build_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>
    <!-- <build_export_depend>controller_manager</build_export_depend> -->
    <build_export_depend>joint_state_controller</build_export_depend>
    <build_export_depend>robot_state_publisher</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <!-- <exec_depend>controller_manager</exec_depend> -->
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <exec_depend>tf</exec_depend>
    <exec_depend>nav_msgs</exec_depend>

</package>
